--- a/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
+++ b/KalendarzKarierySolution/KalendarzKariery/KalendarzKariery.csproj
@@ -245,6 +245,12 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\BackgroundParts\kalendarzTlo.png" />
+    <Content Include="Images\BackgroundParts\kalendarzTloLewy.png" />
+    <Content Include="Images\BackgroundParts\kalendarzTloPrawo.png" />
+    <Content Include="Images\BackgroundParts\LeftSidePixelDark.png" />
+    <Content Include="Images\BackgroundParts\MiddlePartBg.png" />
+    <Content Include="Images\BackgroundParts\RightSidePixelDark.png" />
     <Content Include="Images\kalendarzTloClear.png" />
     <Content Include="Images\Icons\list-icon.png" />
     <Content Include="Images\Logo\kalendarzLogoSmall.png" />
